examples/test/testpolicy10704.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10704
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key46: value40
      key0: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value3
          key2: value22
      podSelector:
        matchLabels:
          key13: value37
          key39: value42
          key8: value38
